--- a/src/app/note-tile/note-tile.component.less
+++ b/src/app/note-tile/note-tile.component.less
@@ -15,7 +15,13 @@
     height: 20px;
     width: 20px;
     .border-radius-l();
-    display: block;
+    // display: block;
     border: 2px solid @blue;
+  }
+
+  .is-completed-task {
+    background-color: #11e496;
+    opacity: 0.5;
+    text-decoration: line-through;
   }
 }
