--- a/src/app/note-list/note-list.component.html
+++ b/src/app/note-list/note-list.component.html
@@ -1,19 +1,31 @@
 <div class="h-screen p-4">
   <div class="note-list flex flex-col p-4 h-full">
-    <div class="header">
-        <h4>Dung's Note</h4>
-        <div class="circle"><span class="number">5</span></div>
+    <div class="header flex justify-between">
+      <div class="text-white">
+        <span class="font-extrabold text-xl">19.09</span> <br/> <span class="font-extralight text-2xl">2023</span>
       </div>
-      <div class="flex flex-col flex-1">
-          <ul class="note-tile-wrapper flex-1">
-            <li *ngFor="let task of allTasks">
-              <app-note-tile content="{{task.content}}" [isCompleted]=task.isCompleted></app-note-tile>
-            </li>
-          </ul>
-        <div>
-          <textarea class="note-input" autofocus placeholder="'Type here...'"> </textarea>
-        </div>
+      <div class="circle-progress-bar flex justify-center items-center w-24 h-24 rounded-full bg-gray-400">
+        <img src="assets/images/avt.jpg" class="rounded-full">
       </div>
+    </div>
+    <div class="flex flex-col flex-1">
+      <ul class="note-tile-wrapper flex-1">
+        <li *ngFor="let task of allTasks">
+          <app-note-tile content="{{task.content}}" [isCompleted]=task.isCompleted></app-note-tile>
+        </li>
+      </ul>
+      <div>
+        <div id="create-task-btn" class="create-task-btn flex justify-center items-center float-right"><a
+          (click)="toggleCreateTaskBtn()">
+          <svg class="h-7 w-7 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"/>
+          </svg>
+        </a></div>
+
+        <textarea id="task-input" class="task-input hidden" autofocus placeholder="'Type here...'"
+                  #myTextarea (keydown.enter)="onEnter($event)"> </textarea>
+      </div>
+    </div>
   </div>
 
 </div>
