--- a/src/app/note-tile/note-tile.component.html
+++ b/src/app/note-tile/note-tile.component.html
@@ -1,4 +1,9 @@
-<div class="note-tile h-12 p-4 flex items-center justify-between {{ isCompleted ? 'is-completed-task' : 'is-not-completed'}}">
+<div (click)="clickDone()"
+     class="note-tile h-12 p-4 flex items-center justify-between {{ isCompleted ? 'is-completed-task' : 'is-not-completed'}}">
   <span class="content">{{content}}</span>
-  <span class="done-btn  {{ isCompleted ? 'hidden' : ''}}" (click)="clickDone()"></span>
+  <svg class="{{ isCompleted ? '' : 'hidden'}} h-6 w-6 text-green-500" viewBox="0 0 24 24" fill="none"
+       stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+    <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"/>
+    <polyline points="22 4 12 14.01 9 11.01"/>
+  </svg>
 </div>
