--- a/src/app/note-tile/note-tile.component.less
+++ b/src/app/note-tile/note-tile.component.less
@@ -4,24 +4,10 @@
 :host {
 
   .note-tile {
-    //.flex-center();
-    //justify-content: space-between;
-    //padding: 16px;
     background: @lightGray;
-    //height: 40px;
-    .border-radius-s();
-  }
-  .done-btn {
-    height: 20px;
-    width: 20px;
-    .border-radius-l();
-    // display: block;
-    border: 2px solid @blue;
   }
 
   .is-completed-task {
-    background-color: #11e496;
-    opacity: 0.5;
-    text-decoration: line-through;
+    background-color: rgba(185, 211, 202, 0.5);
   }
 }
