--- a/src/variables.less
+++ b/src/variables.less
@@ -1,5 +1,7 @@
-@blue: #171725;
-@green: #11E496;
+//@blue: #171725;
+//@green: #11E496;
 @white: #FFF;
 @lightGray: #ECECEC;
 @blue-green: #53778B;
+@blue: #38BDF8;
+@green: #05fe04;
