--- a/src/app/note-list/note-list.component.less
+++ b/src/app/note-list/note-list.component.less
@@ -4,11 +4,13 @@
 :host {
   font-family: 'Poppins', sans-serif;
   .note-list {
-    gap: 16px;
-    border: 1px solid #000000;
+    background-color: #1e293b;
+    box-shadow: inset 0 0 0 1px #ffffff1a;
+    //gap: 16px;
+    //border: 1px solid #000000;
     border-radius: 16px;
-    background-image: url("src/assets/images/background.png");
-    background-size: cover;
+    //background-image: url("src/assets/images/background.png");
+    //background-size: cover;
   }
 
   .note-tile-wrapper {
@@ -29,7 +31,7 @@
   }
 
   .circle-progress-bar {
-    background: conic-gradient(@green 110deg, grey 0);
+    background: conic-gradient(@green 110deg, #444e62 0);
     width: 75px;
     height: 75px;
     img {
