--- a/src/app/note-list/note-list.component.html
+++ b/src/app/note-list/note-list.component.html
@@ -11,7 +11,7 @@
     <div class="flex flex-col flex-1">
       <ul class="note-tile-wrapper flex-1">
 <!--        <li *ngFor="let task of allTasks">-->
-          <app-note-tile></app-note-tile>
+          <app-note-tile [notes]="notes"></app-note-tile>
 <!--        </li>-->
       </ul>
       <div>
